--- a/templates/professional/index.html.twig
+++ b/templates/professional/index.html.twig
@@ -16,7 +16,7 @@
     body {
       font-family: system-ui, sans-serif;
       line-height: 1.6;
-      color: #726D5F;
+      color: #b7b09d;
       background-color: #2E241B;
     }
 
@@ -261,7 +261,7 @@
       <section id="about">
         <h2>About</h2>
         <p>
-          I am a software engineer and product leader with over a decade experience building and improving complex systems.
+          I am a software engineer, <a href="{{ path('profile_research') }}"> researcher</a>, and product leader with over a decade experience building and improving complex systems.
           I've had the pleasure of working on ERP platforms, government financial systems, and data systems for high energy physics research.
         </p>
         <p>
