--- a/templates/professional/acknowledgements.html.twig
+++ b/templates/professional/acknowledgements.html.twig
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Suehr | Projects</title>
+  <title>All Projects</title>
   <meta name="description" content="Your description here.">
   <style>
     * {
@@ -21,7 +21,7 @@
     }
 
     a {
-      color: #b7b09d;
+      color: #F6F1EB;
       text-decoration: none;
       transition: color 0.2s;
     }
@@ -200,7 +200,7 @@
 
     .year {
       white-space: nowrap;
-      color: #b7b09d;
+      color: #726D5F;
     }
   </style>
 </head>
@@ -210,62 +210,28 @@
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
         <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd"/>
       </svg>
-      Your Name
+      Greg Suehr
     </a>
-    <h1>All Projects</h1>
-    
-    <table>
-      <thead>
-        <tr>
-          <th>Year</th>
-          <th>Category</th>
-          <th>Project</th>
-          <th class="hide-tablet">Made at</th>
-          <th>Built with</th>
-          <th class="hide-mobile">Link</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for project in projects %}
-        {% if project.category not in ["Play", "Podcast"] %}
-        <tr>
-          <td class="year">{{ project.year }}</td>          
-          <td class="year">{{ project.category }}</td>
-          <td>
-            {% if project.url %}
-            <a href="{{ project.url }}" class="project-name" target="_blank" rel="noreferrer noopener">
-              {{ project.name }}
-              <svg class="external-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"/>
-              </svg>
-            </a>
-            {% else %}
-            <span class="project-name">{{ project.name }}</span>
-            {% endif %}
-          </td>
-          <td class="hide-tablet">{{ project.madeAt }}</td>
-          <td>
-            <ul class="tags">
-              {% for tag in project.tags %}
-              <li class="tag">{{ tag }}</li>
-              {% endfor %}
-            </ul>
-          </td>
-          <td class="hide-mobile">
-            {% if project.url %}
-            <a href="{{ project.url }}" class="project-link" target="_blank" rel="noreferrer noopener">
-              {{ project.url|replace({'https://': '', 'http://': ''})|split('/')|first }}
-              <svg class="external-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
-                <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"/>
-              </svg>
-            </a>
-            {% endif %}
-          </td>
-        </tr>
-        {% endif %}
-        {% endfor %}
-      </tbody>
-    </table>
+    <h1>Acknowledgements</h1>    
+    <div class="section">
+      <p>
+        Making things is hard. Anyone who has made many things (whether software, or  websites, or songs) knows that to maintain an acceptable
+        level of productivity, one eventually must hone the skill of <i>making good use of what has already been made</i>.
+      </p>
+      <p><br></p>
+      <p>
+        There are many people to whom I owe acknowledgements.
+        But for making things that made making this website much easier, I would like to thank:
+        <br>
+      </p>
+      <p><br></p>      
+      <ul>
+        <li>Brittany Chiang, whose <a href="https://brittanychiang.com/">portfolio site</a> provided the foundational design for this site.
+        </li>
+        <li><a href="https://www.usecue.com">Joost van der Shee</a>, who has instructional thoughts about fast, minimal software and whose implementation of various interactive UI components prop up content here and there across my websites.
+        </li>
+      </ul>
+    </div>      
   </div>
 </body>
 </html>
