Fix type on getkatzen.com

--- a/templates/katzen_demo/landing.html.twig
+++ b/templates/katzen_demo/landing.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
       <div class="hero-content">
         <h1 class="hero-title">Katzen</h1>
-        <p class="hero-tagline">Clean, capable, afforable software for F&amp;B service providers.</p>
+        <p class="hero-tagline">Clean, capable, affordable software for F&amp;B service providers.</p>
       </div>
       <div class="hero-card">
         <p>
